--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 e.preventDefault();
                 alert('Please agree to the terms and conditions.');
             }
+            else {
+                window.location.href = 'love.html';
+            }
         });
     </script>
 </body>
